Slight spacing issues amended.

--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,26 @@
   background-color: #2a2f3d;;
   font-family:"Roboto Mono",monospace;
   box-sizing: border-box;
+  min-height: fit-content;
 }
 *, *:before, *:after {
   box-sizing: inherit;
   scroll-behavior: smooth;
 }
-h2{
+.my-name{
   color: white;
+  font-size: 3rem;
+  margin: 2rem;
 }
 .container{
   width: 100%;
   height: 100vh;
-  position: relative;
   text-align: center;
   flex-direction: column;
   display: flex;
   justify-content: center;
-  font-size: 2rem;
+  
+  
 }
 .small-headings{
   font-size: 1.5rem;
@@ -38,12 +41,14 @@ h2{
 }
 .socials{
   font-size: 1.5rem;
-  margin: 0.5rem;
-  padding: 0rem;
+  padding: 0.5rem;
   color: #fdaf39;
   text-decoration: none;
 }
 a:hover{
   text-decoration: transparent;
   color: aqua;
+}
+.links{
+  margin-top: 2em;
 }
